--- a/employee-payroll-web/index.html
+++ b/employee-payroll-web/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>My Lifts</title>
+    <title>Employee Payroll</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
